lex, https in 404

--- a/static/404.html
+++ b/static/404.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="icon.svg" />
-    <link rel="manifest" href="manifest.json" />
+    <!-- <link rel="manifest" href="manifest.json" /> -->
     <title>pismenost.online</title>
-    <meta http-equiv="refresh" content="0; url=http://pismenost.online">
+    <meta http-equiv="refresh" content="0; url=https://pismenost.online">
     <script type="text/javascript">
-        window.location.href = "http://pismenost.online"
+        window.location.href = "https://pismenost.online"
     </script>
 </head>
 
